# example_project_ismael

./: README.md  pyproject.toml
example_package_ismael.egg-info/: PKG-INFO  SOURCES.txt  top_level.txt
